--- a/StickyOnPage/res/values/strings.xml
+++ b/StickyOnPage/res/values/strings.xml
@@ -2,11 +2,12 @@
 <resources>
 
     <string name="app_name">StickyOnPage</string>
-    <string name="app_id">537011096374026</string>
+    <!-- <string name="app_id">537011096374026</string> -->
+    <string name="app_id">421390317961031</string>
     <string name="get_started">To get started,\nlogin using Facebook or Twitter</string>
     <string name="twitterLogin">Log in with Twitter</string>
     <string name="settings">Settings</string>
     <string name="welcome">You are now logged in.\nWelcome to Sticky on Page.</string>
-	    
+	<string name="button_str">Start Browsing</string>
     
 </resources>
