--- a/StickyOnPage/res/values/strings.xml
+++ b/StickyOnPage/res/values/strings.xml
@@ -8,9 +8,13 @@
     <string name="twitterLogin">Log in with Twitter</string>
     <string name="settings">Settings</string>
     <string name="welcome">You are now logged in.\nWelcome to Sticky on Page.</string>
-	<string name="button_str">Start Browsing</string>
 	<string name="recent_sticky_str1">&#160;put Sticky</string>
 	<string name="recent_sticky_str2">on&#160;</string>
 	<string name="browser_hint">Enter URL</string>
     
+	<string name="recent_search_str">Search</string>
+	<string name="recent_overflow_str">More</string>
+	<string name="browsing_prev_str">Sticky</string>
+	<string name="browsing_next_str">Recommendation</string>
+	
 </resources>
