RecentStickyFragment changes 1. Add action view to action bar 2. Connect action view and BrowsingWebView    (action view -> enter URL to go -> browsing gets started) 3. Change sticky list layout

--- a/StickyOnPage/res/values/strings.xml
+++ b/StickyOnPage/res/values/strings.xml
@@ -16,5 +16,6 @@
 	<string name="recent_overflow_str">More</string>
 	<string name="browsing_prev_str">Sticky</string>
 	<string name="browsing_next_str">Recommendation</string>
+	<string name="browsing_home_str">Home</string>
 	
 </resources>
