Show the latest sticky list of friends on RecentStickyFragment. (Warn! it has error so far once RecentStickyFragment is re-visited after browsing.)

--- a/StickyOnPage/res/values/strings.xml
+++ b/StickyOnPage/res/values/strings.xml
@@ -11,6 +11,7 @@
 	<string name="recent_sticky_str1">&#160;put Sticky</string>
 	<string name="recent_sticky_str2">on&#160;</string>
 	<string name="browser_hint">http://m.daum.net/</string>
+	<string name="scroll_no_friends">Oops!\nNone of your frineds use Sticky on Page. :(</string>
     
 	<string name="recent_search_str">Search</string>
 	<string name="recent_overflow_str">More</string>
