--- a/StickyOnPage/res/values/strings.xml
+++ b/StickyOnPage/res/values/strings.xml
@@ -2,12 +2,15 @@
 <resources>
 
     <string name="app_name">Sticky\nOn Page</string>
-    <string name="app_id">537011096374026</string> 
-     <!-- <string name="app_id">421390317961031</string>-->
-    <string name="get_started">To get started,\nlogin using Facebook or Twitter</string>
-    <string name="twitterLogin">Log in with Twitter</string>
+    <!-- <string name="app_id">537011096374026</string> --> 
+    <string name="app_id">421390317961031</string>
+    
+    <string name="login_app_name">Sticky on Page</string>
+    <string name="login_get_started">To get started,\nlogin using Facebook or Twitter</string>
+    <string name="login_twitterLogin">Log in with Twitter</string>
     <string name="settings">Settings</string>
-    <string name="welcome">You are now logged in.\nWelcome to Sticky on Page.</string>
+    <string name="login_welcome">You are now logged in.\nWelcome to Sticky on Page.</string>
+	
 	<string name="recent_sticky_str1">&#160;put Sticky</string>
 	<string name="recent_sticky_str2">on&#160;</string>
 	<string name="browser_hint">http://m.daum.net/</string>
@@ -15,6 +18,7 @@
     
 	<string name="recent_search_str">Search</string>
 	<string name="recent_overflow_str">More</string>
+	<string name="recent_logout_str">Logout</string>
 	<string name="browsing_prev_str">Sticky</string>
 	<string name="browsing_next_str">Recommendation</string>
 	<string name="browsing_home_str">Home</string>
